// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaultCreator reducer handles actions clearCreator 1`] = `
Immutable.VaultCreatorState {
  "password": "",
  "repeat": "",
  "passwordVisible": false,
  "repeatVisible": false,
}
`;

exports[`VaultCreator reducer handles actions setPassword 1`] = `
Immutable.VaultCreatorState {
  "password": "test password",
  "repeat": "",
  "passwordVisible": false,
  "repeatVisible": false,
}
`;

exports[`VaultCreator reducer handles actions setRepeat 1`] = `
Immutable.VaultCreatorState {
  "password": "",
  "repeat": "test password",
  "passwordVisible": false,
  "repeatVisible": false,
}
`;

exports[`VaultCreator reducer handles epics createVault bootstraps general channel to new account 1`] = `
Immutable.List [
  Immutable.Map {
    "keys": Immutable.Map {
      "ivk": "zivktestsapling1p5rp2czztl8amalqm5ghzvhr35n08h26vhphnw2x6k83trft7sqsn9qkd6",
    },
    "name": "General",
    "private": true,
    "hash": "eJxNj0FuhDAMRa8SZU2rKQMU5gK9QFfdeYhDgGBCYphJRnP3pu2mkqVvfUv/+z0kwYLyIj+Q0IOVhXR+PICzx37HQhoIJt9pffndCglKeQwhe4kxcABnRxreGqxuOG9TvLenOE1Jl1XiqC2Xfc3cwMEVaR5oarqKWqzvrU618x1OQZ1tZ5e46LKbzURzLtnJIyh5ORVSYej96HhcKXd+mjGIPCCGv49Fb4AIrYADRgtXi4JXAdaKPaAPYtXi6wpRXKNQqGG3/JrzZ4yZ4CHHY/4ByfKfxdXelX1KbFtYwG5LPZh0GH+u6dSasjmMM3Qr783cntlrfg9boG6bVSOfz2/ANHfQ",
    "address": "ztestsapling16e4wekqjyx80yjjzf24ztyflt2c5tt6avt4nftgnj694n8e5x8fz5pr9ejsd3l9lmymf29khjnk",
    "unread": 0,
    "description": "This is a general channel available to all users of Zbay by default.",
  },
]
`;

exports[`VaultCreator reducer handles epics createVault clears creator if creating fails 1`] = `
Immutable.VaultCreatorState {
  "password": "",
  "repeat": "",
  "passwordVisible": false,
  "repeatVisible": false,
}
`;

exports[`VaultCreator reducer handles epics createVault clears creator if unlocking fails 1`] = `
Immutable.VaultCreatorState {
  "password": "",
  "repeat": "",
  "passwordVisible": false,
  "repeatVisible": false,
}
`;

exports[`VaultCreator reducer handles epics createVault creates identity and sets balance 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": "thisisatestid",
    "address": "sapling-zcash-address",
    "name": "Saturn",
    "balance": "12.345",
  },
  "fetchingBalance": false,
  "errors": "",
}
`;

exports[`VaultCreator reducer handles epics createVault creates the vault 1`] = `
Array [
  Array [
    Object {
      "masterPassword": "test password",
    },
  ],
]
`;

exports[`VaultCreator reducer handles epics createVault throws if passwords don't match 1`] = `"Can't create vault, passwords don't match."`;

exports[`VaultCreator reducer handles epics createVault unlocks the vault 1`] = `
Array [
  Array [
    Object {
      "createSource": true,
      "masterPassword": "test password",
    },
  ],
]
`;
